--- a/app/globals.css
+++ b/app/globals.css
@@ -101,12 +101,12 @@ img {
 }
 
 .header__container {
-  max-width: 1100px;
+  max-width: 100%;
   margin: 0 auto;
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 4px 16px;
+  padding: 4px 24px;
   gap: 12px;
 }
 
